--- a/LittleD_19birthday.html
+++ b/LittleD_19birthday.html
@@ -12,6 +12,7 @@
       width: 50%;
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: contain;
     }
     </style>
   </head>
