--- a/LittleD_19birthday.html
+++ b/LittleD_19birthday.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <div id = "01" style = "position: absolute; top: 1000px;">
-    <img src = "Deco1.png" width = "50%" height = "50%">
+    <img src = "Deco1.png" width = "250px">
   </div>
   <div id = "02" style = "position: absolute; top: 2000px;">
     <img src = "Deco2.png" width = "50%" height = "50%">
