--- a/LittleD_19birthday.html
+++ b/LittleD_19birthday.html
@@ -14,10 +14,18 @@
       background-attachment: fixed;
       background-size: contain;
     }
+    .resize {
+      width : auto;
+      width : 1200px;
+    }
+    .resize {
+      height : auto;
+      height : 800px;
+    }
     </style>
   </head>
   <div id = "01" style = "position: absolute; top: 1000px;">
-    <img src = "Deco1.png" width = "250px">
+    <img src = "Deco1.png" class = "resize">
   </div>
   <div id = "02" style = "position: absolute; top: 2000px;">
     <img src = "Deco2.png" width = "50%" height = "50%">
