--- a/LittleD_19birthday.html
+++ b/LittleD_19birthday.html
@@ -15,10 +15,10 @@
       background-size: contain;
     }
     .resize {
-      width : 600px;
+      width : 300px;
     }
     .resize {
-      height : 400px;
+      height : 200px;
     }
     </style>
   </head>
@@ -26,12 +26,12 @@
     <img src = "Deco1.png" class = "resize">
   </div>
   <div id = "02" style = "position: absolute; top: 2000px;">
-    <img src = "Deco2.png" width = "50%" height = "50%">
+    <img src = "Deco2.png" class = "resize">
   </div>
   <div id = "03" style = "position: absolute; top: 3000px;">
-    <img src = "Deco3.png" width = "50%" height = "50%">
+    <img src = "Deco3.png" class = "resize">
   </div>
   <div id = "04" style = "position: absolute; top: 4000px;">
-    <img src = "Deco4.png" width = "50%" height = "50%">
+    <img src = "Deco4.png" class = "resize">
   </div>
 </html>
