--- a/LittleD_19birthday.html
+++ b/LittleD_19birthday.html
@@ -18,16 +18,16 @@
     }
     </style>
   </head>
-  <div id = "01" style = "position: absolute; top: 1000px; left: 5px;">
-    <img src = "Deco1.png" class = "resize">
+  <div id = "01" style = "position: absolute; top: 1000px;">
+    <img src = "Deco1.png" class = "resize" width = "990px" height = "660px">
   </div>
-  <div id = "02" style = "position: absolute; top: 2000px; left: 5px;">
-    <img src = "Deco2.png" class = "resize">
+  <div id = "02" style = "position: absolute; top: 2000px;">
+    <img src = "Deco2.png" class = "resize" width = "990px" height = "660px">
   </div>
-  <div id = "03" style = "position: absolute; top: 3000px; left: 5px;">
-    <img src = "Deco3.png" class = "resize">
+  <div id = "03" style = "position: absolute; top: 3000px;">
+    <img src = "Deco3.png" class = "resize" width = "990px" height = "660px">
   </div>
-  <div id = "04" style = "position: absolute; top: 4000px; left: 5px;">
-    <img src = "Deco4.png" class = "resize">
+  <div id = "04" style = "position: absolute; top: 4000px;">
+    <img src = "Deco4.png" class = "resize" width = "990px" height = "660px">
   </div>
 </html>
