--- a/LittleD_19birthday.html
+++ b/LittleD_19birthday.html
@@ -13,13 +13,13 @@
       background-size: contain;
     }
     .resize {
-      width : 600px;
-      height : 400px;
+      width : 990px;
+      height : 660px;
     }
     </style>
   </head>
   <div id = "01" style = "position: absolute; top: 1000px;">
-    <img src = "Deco1.png" class = "resize">
+    <img src = "Deco1.png" width = "600px" height = "400px">
   </div>
   <div id = "02" style = "position: absolute; top: 2000px;">
     <img src = "Deco2.png" class = "resize">
