--- a/LittleD_19birthday.html
+++ b/LittleD_19birthday.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <div id = "01" style = "position: absolute; top: 1000px;">
-    <img src = "Deco1.png" class = "resize" width = "990px" height = "660px">
+    <img src = "Deco1.png" width = "600px" height = "400px">
   </div>
   <div id = "02" style = "position: absolute; top: 2000px;">
     <img src = "Deco2.png" class = "resize" width = "990px" height = "660px">
